# revit-semantic-schema-mapper

./: .gitignore  CLAUDE.md
revit_semantic_schema/: README.md  pyproject.toml  reflect_revit_api.ps1  summarize_manifest.ps1
revit_semantic_schema/docs/: confidence_model_v0.md  crawl_notes.md  dll_reflection_v0.md  edge_taxonomy_v0.md  multi_source_corroboration_v0.md
revit_semantic_schema/outputs/_fixture_smoke_test/: api_pages.json  enum_catalogs.json  node_type_candidates.json  property_relationship_candidates.json  raw_index.json  summary.md
revit_semantic_schema/outputs/revit_2024/: graph_core_2024.json  revitlookup_reference.json  summary.md
revit_semantic_schema/outputs/revit_2024_targeted/: api_pages.json  candidate_edges.json  known_edge_report.json  method_relationship_candidates.json  node_type_candidates.json  property_relationship_candidates.json  raw_index.json  target_report.json  validation_summary.md
revit_semantic_schema/outputs/revit_2025/: ground_truth_manifest_2025.json  summary.md
revit_semantic_schema/outputs/revit_2027/: PENDING_LIVE_CRAWL.md  summary.md
revit_semantic_schema/src/revit_schema_mapper/: __init__.py  __main__.py  classify.py  community.py  crawl.py  export.py  graph.py  graph_viewer_template.html  ground_truth.py  html_compat.py  http_compat.py  models.py  (+5 more)
revit_semantic_schema/tests/: conftest.py  test_classify.py  test_community.py  test_crawl.py  test_export.py  test_graph.py  test_ground_truth.py  test_http_compat.py  test_parse.py  test_pipeline.py  test_revitlookup.py  test_semantic_roles.py  test_unknown_pareto.py
(+14 files in other folders)
